# rs-kafka

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build.rs  rs-kafka-threat-model.md
.github/workflows/: release.yml  rust.yml
docs/: migration-openssl-to-rustls.md  sasl.md
examples/: console-consumer.rs  console-producer.rs  example-consume.rs  example-fetch.rs  example-produce.rs  example-sasl-plain.rs  example-ssl.rs  offset-monitor.rs  topic-metadata.rs
src/: codecs.rs  error.rs  lib.rs  producer.rs  utils.rs
src/client/: metadata.rs  mod.rs  network.rs  sasl.rs  state.rs  tls.rs
src/compression/: gzip.rs  snappy.rs
src/consumer/: builder.rs  mod.rs  state.rs
src/protocol/: api_versions.rs  consumer.rs  fetch.rs  list_offset.rs  metadata.rs  mod.rs  offset.rs  produce.rs  records.rs  sasl_authenticate.rs  sasl_handshake.rs  zreader.rs
tests/: .env  do_until_success  docker-compose.yml  run-all-tests  test_kafka.rs
tests/fixtures/tls/: ca.crt.pem  client.crt.pem  client.key.pem  server.crt.pem  server.key.pem
tests/integration/: sasl.rs  tls.rs
tests/integration/client/: mod.rs
tests/integration/consumer_producer/: consumer.rs  mod.rs  producer.rs
