[package]
name = "kafka"
version = "0.10.0"
authors = ["John Ward", "John Ward <john@johnward.net>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/kafka/"
edition = "2021"
keywords = ["kafka", "queue"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kafka-rust/kafka-rust"
description = "Rust client for Apache Kafka"

[dependencies]
byteorder = "1.5"
crc = "3.2"
fnv = "1.0.7"
ref_slice = "1.2.1"
twox-hash = "1.6.3"

flate2 = { version = "1.0", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
snap = { version = "1.1", optional = true }
chrono = {version = "0.4", optional = true}
thiserror = "1.0"
tracing = "0.1"
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
getopts = "0.2.21"
tracing-subscriber = "0.3"
time = "0.3"
rand = "0.8.5"
lazy_static = "1.5"
anyhow = "1.0"

[features]
default = ["snappy", "gzip", "security"]
snappy = ["snap"]
gzip = ["flate2"]
security = ["rustls", "rustls-native-certs", "rustls-pemfile", "webpki-roots"]
producer_timestamp = ["chrono"]
nightly = []
integration_tests = []
